tests/bad/func/unknown-type.go
package main;

func foo(a A) {}
